[package]
name = "fix_photos_timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.26"
chrono-tz = "0.8.3"
futures-core = "0.3.28"
futures-util = "0.3.28"
google-photoslibrary1 = "5.0.2"
hyper = "0.14.27"
hyper-rustls = "0.24.1"
lazy_static = "1.4.0"
regex = "1.9.1"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread"] }
yup-oauth2 = "8.3.0"
